--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write
       pages: write
-      id_token: write
+      id-token: write
 
     steps:
       - name: Checkout Repository
