--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy React App to Github Pages
+name: Deploy client to GitHub Pages
 
 on:
   push:
@@ -23,13 +23,13 @@ jobs:
           node-version: '20'
 
       - name: Install Dependencies
-        run: npm install
+        run: cd client && npm install
 
       - name: Build React App
-        run: npm run build
+        run: cd client && npm run build
 
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./client/dist
