--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build React App
         run: cd client && npm run build
 
+      - name: Copy index.html to 404.html
+        run: cp client/dist/index.html client/dist/404.html
+
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
